# testausclip-backend

./: .gitignore  APISPEC.md  Cargo.toml  LICENSE  README.md  config.ini  config.toml.default
migrations/2024-02-03-075549_create_posts/: up.sql
migrations/2024-02-05-152334_users/: up.sql
migrations/2024-02-05-153451_clips/: down.sql  up.sql
migrations/2024-02-07-161135_likes/: down.sql  up.sql
migrations/2024-02-16-154535_user_identities/: down.sql  up.sql
migrations/2024-05-12-150859_create_users/: down.sql  up.sql
src/: config.rs  error.rs  main.rs  models.rs  requests.rs  schema.rs  utils.rs
src/api/: auth.rs  clip.rs  mod.rs
src/auth/: mod.rs  secured_access.rs
src/database/: auth.rs  clips.rs  mod.rs  posts.rs
src/storage/: clips.rs  mod.rs
