[package]
name = "testausclip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
confy = "0.6.0"
serde = "1.0.196"
serde_derive ="1.0.196"
serde_json = "1"
mime = "0.3.16"
futures-util = "0.3.25"
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }
tokio = { version = "1.24.1", features = ["fs"] }
file-format = "0.24.0"
diesel = { version = "2.1.4", features = ["chrono", "postgres", "uuid", "r2d2"] }
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15"
ulid = "1.1.2"
argon2 = "0.5.3"
rand = "0.8.5"
itertools = "0.12.1"